# CHD-Detection-Transformer-ECG

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: model_design.md  module_design.md  testing_strategy.md
scripts/: evaluate.py  perturbation_test.py  preprocess.py  train.py  visualize.py
src/chddecg/: __init__.py  config.py
src/chddecg/data/: augmentation.py  datasets.py  io.py  preprocessing.py
src/chddecg/evaluation/: evaluate.py  perturbation.py  visualization.py
src/chddecg/models/: __init__.py  chddecg.py  resnet_module.py  tabnet_downsampling.py  transformer_module.py
src/chddecg/models/tabnet/: __init__.py  custom_objects.py
src/chddecg/training/: metrics.py  train.py
src/chddecg/utils/: seed.py
tests/: test_augmentation.py  test_io.py  test_model_smoke.py  test_preprocessing.py
